# timings

./: Cargo.toml  README.md
examples/: benchmark.rs  simple.rs
src/: formatting.rs  lib.rs
tests/: multithread.rs
