[package]
name = "timings"
version = "0.1.0"
edition = "2021"
description = "A simple set of timing-related tools for benchmarking"
repository = "https://github.com/khonsulabs/timings"
license = "MIT OR Apache-2.0"
keywords = ["benchmarking", "timing", "benchmark"]
categories = ["development-tools::profiling"]
readme = "./README.md"
rust-version = "1.59.0"

[features]
default = ["formatting"]
formatting = ["tabled"]

[dependencies]
flume = "0.10.12"
tabled = { version = "0.8.0", optional = true }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
core_affinity = "0.5.10"

[[test]]
name = "multithread"
harness = false
